Opened 7 years ago
Closed 5 years ago
#10838 closed bug (fixed)
If an error occurs, package state gets stuck in "pending"
Reported by: | waddlesplash | Owned by: | jscipione |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta1 |
Component: | Applications/HaikuDepot | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #12308 | |
Platform: | All |
Description
- Click "install" on a package that can't be installed (I did it on "openttd_x86")
- State changes to "pending" and error message pops up (with "info" not "critical" icon...?)
- State stays in "pending" until the app is restarted.
Change History (7)
comment:1 by , 7 years ago
Milestone: | R1 → R1/alpha5 |
---|
comment:2 by , 6 years ago
Milestone: | R1/alpha5 → R1/beta1 |
---|
comment:3 by , 5 years ago
Blocking: | 12308 added |
---|
comment:4 by , 5 years ago
comment:6 by , 5 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Note:
See TracTickets
for help on using tickets.
#12308 contains another way to reproduce it.