HaikuDepot: Reset package state on failure

* Save the package state before attempting to install/uninstall the package.
* In the case of failure set the package state back to what it was.
* Use the synchronous version of BAlert so that the package state won't
  change until the user clicks the Close button on the dialog.

Fixes #10838